# Virtual-Engine-Base

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
scripts/: asynclogger.cmake  cpr.cmake  discordrpc.cmake  gtav-classes.cmake  imgui.cmake  json.cmake  minhook.cmake
src/: Common.hpp  Features.hpp  FiberHelper.hpp  Game.cpp  Game.hpp  Hooking.cpp  Hooking.hpp  Invoker.hpp  Lists.hpp  LogScript.cpp  LogScript.hpp  Main.cpp  Notify.hpp  Player.h  Script.hpp  ScriptGlobal.hpp  Settings.hpp  Translation.hpp  Types.hpp  Utility.hpp  Vehicle.hpp
src/Backend/: Authorization.cpp  Authorization.hpp  BackendMain.cpp  BackendMain.hpp  BackendRegistry.cpp  BackendRegistry.hpp
src/DX/: D3DRenderer.cpp  D3DRenderer.hpp
src/Features/: Self.cpp  Self.hpp  weapon.cpp  weapon.hpp
src/File/: file.cpp  file.hpp  file_manager.cpp  file_manager.hpp  folder.cpp  folder.hpp
src/GTA/: Crossmap.hpp  Memory.hpp  Natives.hpp  thread_pool.cpp  thread_pool.hpp
src/GTA/Data/: cache_file.cpp  cache_file.hpp  ped_item.hpp  vehicle_item.hpp  weapon_component.hpp  weapon_file.hpp  weapon_item.hpp
src/GTA/memory/: all.hpp  byte_patch.cpp  byte_patch.hpp  fwddec.hpp  handle.hpp  module.cpp  module.hpp  pattern.cpp  pattern.hpp  pattern_batch.cpp  pattern_batch.hpp  range.cpp  range.hpp
src/Pattern/: pointers.cpp  pointers.hpp  pools.hpp  sc_pointers.hpp
src/Pattern/Func/: function_types.hpp
src/Script/patcher/: script_data.hpp  script_patch.cpp  script_patch.hpp  script_patcher_service.cpp  script_patcher_service.hpp
src/Script/pool/: FiberPool.cpp  FiberPool.hpp
src/UI/: Framework.cpp  Framework.hpp
src/UI/option/: BoolOption.hpp  BoolwithChoose.hpp  BoolwithNumber.hpp  ChooseOption.hpp  HotkeyOption.hpp  NumberOption.hpp  OptionBase.hpp  OptionGetters.hpp  (+3 more)
src/Utility/: Caller.h  scaleform.cpp  scaleform.hpp
src/log/: Logger.cpp  Logger.hpp
src/menu/: main_menu.cpp  main_menu.hpp  submenu.h
(+8 files in other folders)
